# LR-GLASS

./: .gitignore  BuildMe.sh  CMakeLists.txt  Example_datacard.txt  README  README.md  RunMe.sh  main.C  makefile  test.txt
Efficiencies/: Sigmoide.cc
cards/: 1250.txt  1259.txt  1264.txt  1266.txt  12662.txt  1278.txt  1280.txt  1282.txt  12822.txt  volEff.txt
cards/GIF/OFF/: 1309.txtno  1313.txt
cards/GIF/Random/: 1315.txt  1316.txt  1317.txt  1318.txt  1320.txt  1321.txt  1323.txt  1325.txt  1328.txt  1329.txt
cards/GIF/Signal/: 1250.txt  1278.txt  1287.txt
cards/GIF/Source_scan/: 6800V.txt  7000V.txt
cards/GIF_sept-2016/1690/: 1690.txt
cards/GIF_sept-2016/1706/: 1706.txt
cards/GIF_sept-2016/1707/: 1707.txt
cards/GIF_sept-2016/HVSCAN_Att_10_220mV/: HVSCAN_Att_10_220mV.txt
cards/GIF_sept-2016/HVSCAN_Att_4.6_200mV/: HVSCAN_Att_4.6_200mV.txt
cards/GIF_sept-2016/HVSCAN_Att_4.6_270mV/: HVSCAN_Att_4.6_270mV.txt
cards/GIF_sept-2016/HVSCAN_Att_4p6_220mV/: HVSCAN_Att_4p6_220mV.txt
cards/GIF_sept-2016/HVSCAN_Att_Off_220mV/: ThrOffEff_220mV.txt  ThrOffEff_220mV.txt~
cards/GIF_sept-2016/NOSOURCE/: NOSOURCE.txt
cards/GIF_sept-2016/SourceScanEfficiency_20161006/: Thr10Eff.txt  Thr10Eff.txt~  Thr22Eff.txt  Thr22Eff_220mV.txt  Thr2p2Eff.txt  Thr2p2Eff.txt~  Thr3p3Eff.txt  Thr3p3Eff.txt~  Thr3p3Eff_220mV.txt  Thr46Eff.txt  Thr4p6Eff.txt  Thr4p6Eff.txt~  ThrOffEff.txt  ThrOffEff.txt~
cards/GIF_sept-2016/Thr220Eff/: Thr220Eff.txt
cards/GIF_sept-2016/Thr250Eff/: Thr250Eff.txt
cards/GIF_sept-2016/Thr270Eff/: Thr270Eff.txt
cards/GIF_sept-2016/Thr300Eff/: Thr300Eff.txt  test.txt
cards/GIF_sept-2016/Thr300Eff_2/: Thr300Eff_2.txt
cards/H2/: Scan1.txt
cards/OFF/: 1309.txt  1313.txt
cards/Random/: 1314.txt  1319.txt  1322.txt  1324.txt  1326.txt  1327.txt
cards/Signal/: 1264.txt  1266.txt  1280.txt  1282.txt  1285.txt  1287.txt
cards/Source_scan/: 6600V.txt
cards/test/: test.txt
cardtest/: 1282.txt
include/: Analysis.hh  Chambers.h  Configure.hh  Func.h  OutFileRoot.hh  RAWData.h  Reader.h  ReaderCSV.h  Tokenize.h
source/: Analysis.cc  Chambers.cc  Configure.cc  Func.cc  OutFileRoot.cc  Reader.cc  ReaderTXT.cc  Tokenize.cc
source/include/: Analysis.h  Chambers.h  Cluster.h  Correlation.h  OutFileRoot.h  Plots.h  Polya.h  RAWData.h  Reader.h  ReaderCSV.h  ReaderTXT.h  Sigmoid.h  Tokenize.h  Version.h  Version.h.in  thr.h
source/src/: Analysis.cpp  Chambers.cpp  Cluster.cpp  Correlation.cpp  OutFileRoot.cpp  Plots.cpp  Polya.cpp  Reader.cpp  ReaderCSV.cpp  ReaderTXT.cpp  Sigmoid.cpp  Tokenize.cpp  main.cpp  tdrStyle.cpp  thr.cpp
src/include/: Analysis.hh  Chambers.h  OutFileRoot.hh
src/source/: Analysis.cc  Chambers.cc  OutFileRoot.cc  Reader.cc  ReaderTXT.cc
(+6 files in other folders)
